<resources>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="save">save</string>
    <string name="recipe">Recipe</string>
    <string name="settings">settings</string>
    <string name="add_step_recipe">add step</string>
    <string name="start_now">start now</string>
    <string name="schedule">schedule</string>
    <string name="new_step">New step</string>
    <string name="new_recipe">new recipe</string>
    <string name="step_no">Step No. </string>
    <string name="no_recipes">no recipes available</string>
    <string name="no_files">no files available</string>
    <string name="no_steps">no steps available</string>
    <string name="app_name">Bake Assistant</string>
    <string name="default_times">Default Times</string>

    <string name="mixing">mixing</string>
    <string name="forming">forming</string>
    <string name="weigh_in">weigh in ingredients</string>
    <string name="folding">stretching and folding</string>
    <!-- variable times -->
    <string name="kneading">kneading</string>
    <string name="ripening">ripening</string>
    <string name="baking">baking</string>
    <string name="acclimatisation">acclimatisation</string>

    <string name="menu">Menu</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_up">Up</string>
    <string name="menu_down">Down</string>

    <string name="title_edit_step">Edit step #{0}:</string>
    <string name="step_start">Start</string>
    <string name="step_done">Done</string>

    <string name="title_preparation">Preparation:</string>
    <string name="label_start_time">Start-Time: </string>
    <string name="done">Done</string>
    <string name="sleep">Sleep 3 min</string>

    <string name="label_day">Day</string>
    <string name="label_planned">planned: </string>
    <string name="instructions_scheduled">Alarm scheduled</string>
    <string name="back_will_abort">CAUTION: Another \'back\' will abort the preparation and all alarms!</string>
    <string name="start_with_alarm">start with alarm</string>
    <string name="really_delete_recipe">Really delete recipe?</string>
    <string name="adjust_time">Adjust time of next steps</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="start_in_the_middle">One or more steps are in the past. Start with the step planned for now?</string>
    <string name="reason_manage_overlay_permissions">In the following system-dialog, you must grant the right to <i>Display over other apps</i>.\n\nThe application needs this right to be able to show alarms when running in background.</string>
    <string name="can_not_run_without_permission">The application can not work properly without this permission!</string>

    <string name="export_recipes">Export recipes</string>
    <string name="import_recipes">Import recipes</string>
</resources>