<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cfg.ConfigurationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_times"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/weigh_in_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/weigh_in" />

        <EditText
            android:id="@+id/weigh_in"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
        <TextView
            android:id="@+id/weigh_in_min"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/minutes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/mixing_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/mixing" />

            <EditText
                android:id="@+id/mixing"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true" />
            <TextView
                android:id="@+id/mixing_min"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/minutes" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/forming_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/forming" />

            <EditText
                android:id="@+id/forming"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
            <TextView
                android:id="@+id/forming_min"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/minutes" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>